Big performance enhancements, and all artifacts get to Proxmox

--- a/ansible/ansible.cfg
+++ b/ansible/ansible.cfg
@@ -1,10 +1,9 @@
 [defaults]
-# result_format = yaml
-stdout_callback = community.general.unixy
+callback_result_format = yaml
+show_custom_stats = true
 force_color = true
 inventory = ./inventories/hosts.yml
 roles_path = ./roles
 playbook_dir = ./playbooks
 
-# [connection]
-# ssh_agent = ~/.1password/agent.sock
+callbacks_enabled = timer, profile_tasks
