--- a/ansible/site.yml
+++ b/ansible/site.yml
@@ -15,6 +15,16 @@
                      vault='HomeLab') }}"
         ignition_template_ts_auth_key: >-
           {{ lookup('community.general.onepassword', 'Tailscale', field='coachlight-homelab auth key', vault='HomeLab') }}
+        proxmox_k3s_cluster_token: >-
+          {{ lookup('community.general.onepassword',
+                    'Coachlight k3s Cluster',
+                    field='cluster token',
+                    vault='HomeLab') }}
+        proxmox_api_password: >-
+          {{ lookup('community.general.onepassword',
+                    'Coachlight ProxMox Cluster',
+                    field='ng7tr2fe5zm32b3ukayno6lciy',
+                    vault='HomeLab') }}
       run_once: true
       delegate_to: localhost
 
