--- a/ansible/playbooks/workstations.yml
+++ b/ansible/playbooks/workstations.yml
@@ -2,43 +2,7 @@
   hosts: localhost
   gather_facts: true
 
-  vars:
-    ansible_user: sfroeber
-
-  vars_prompt:
-    - name: tailscale_authkey
-      prompt: Please provide an auth key from https://login.tailscale.com/admin/settings/keys
-      private: true
-
-  pre_tasks:
-    - name: Check if .vault_password.txt exists
-      ansible.builtin.stat:
-        path: "{{ playbook_dir }}/.vault_password.txt"
-      register: vault_pw_file
-
-    - name: Prompt for Vault password if missing
-      ansible.builtin.pause:
-        prompt: "Enter your Ansible Vault password for 1Password service account"
-        echo: no
-      when: not vault_pw_file.stat.exists
-      register: user_vault_password
-
-    - name: Save password file
-      ansible.builtin.copy:
-        dest: "{{ playbook_dir }}/.vault_password.txt"
-        content: "{{ user_vault_password.user_input }}"
-        mode: "0600"
-      when: not vault_pw_file.stat.exists
-
-    - name: Stop run until password is present
-      ansible.builtin.fail:
-        msg: "Vault password saved—re-run the playbook."
-      when: not vault_pw_file.stat.exists
-
-    - ansible.builtin.getent:
-        database: passwd
-        key: "{{ ansible_user_id }}"
-      register: pw
+  tasks:
 
     # - name: Assemble first name
     #   ansible.builtin.set_fact:
@@ -53,66 +17,65 @@
     #       {% elif 'desktop' in ff or 'tower' in ff %} Desktop
     #       {% else %} PC {% endif %}
 
-    - name: Assemble first name
-      ansible.builtin.shell: |
-        getent passwd "$USER" | cut -d: -f5 | cut -d' ' -f1
-      register: first_name
+    # - name: Assemble first name
+    #   ansible.builtin.shell: |
+    #     getent passwd "$USER" | cut -d: -f5 | cut -d' ' -f1
+    #   register: first_name
 
-    - name: Assemble CPU short name
-      ansible.builtin.shell: lscpu | grep -m1 'Model name:' | sed 's/Model name:[[:space:]]*//;s/@.*//'
-      register: cpu
+    # - name: Assemble CPU short name
+    #   ansible.builtin.shell: lscpu | grep -m1 'Model name:' | sed 's/Model name:[[:space:]]*//;s/@.*//'
+    #   register: cpu
 
-    - ansible.builtin.set_fact:
-        cpu_short: "{{ cpu.stdout.split()[:2] | join(' ') }}"
+    # - ansible.builtin.set_fact:
+    #     cpu_short: "{{ cpu.stdout.split()[:2] | join(' ') }}"
 
-    - name: Read chassis code
-      ansible.builtin.command: cat /sys/class/dmi/id/chassis_type
-      register: chassis_code
-      failed_when: false
-      changed_when: false
+    # - name: Read chassis code
+    #   ansible.builtin.command: cat /sys/class/dmi/id/chassis_type
+    #   register: chassis_code
+    #   failed_when: false
+    #   changed_when: false
 
-    - name: Map chassis code to class
-      ansible.builtin.set_fact:
-        hw_class: >-
-          {% set c = chassis_code.stdout | default('0') | int %}
-          {% if c in [8, 9, 10, 14] %} Laptop
-          {% elif c in [3, 4, 5, 6, 7] %} Desktop
-          {% else %} PC {% endif %}
+    # - name: Map chassis code to class
+    #   ansible.builtin.set_fact:
+    #     hw_class: >-
+    #       {% set c = chassis_code.stdout | default('0') | int %}
+    #       {% if c in [8, 9, 10, 14] %} Laptop
+    #       {% elif c in [3, 4, 5, 6, 7] %} Desktop
+    #       {% else %} PC {% endif %}
 
-    - name: Assemble pretty / static hostnames
-      ansible.builtin.set_fact:
-        pretty_hostname: "{{ first_name }}’s {{ cpu_short }} Fedora {{ hw_class }}"
-        static_hostname: >-
-          {{ (first_name | lower | regex_replace('[^a-z0-9]', '')) ~ 's-' ~
-            (cpu_short | lower | regex_replace('[^a-z0-9]+', '-')) ~
-            '-fedora-' ~ (hw_class | lower) }}
+    # - name: Assemble pretty / static hostnames
+    #   ansible.builtin.set_fact:
+    #     pretty_hostname: "{{ first_name }}’s {{ cpu_short }} Fedora {{ hw_class }}"
+    #     static_hostname: >-
+    #       {{ (first_name | lower | regex_replace('[^a-z0-9]', '')) ~ 's-' ~
+    #         (cpu_short | lower | regex_replace('[^a-z0-9]+', '-')) ~
+    #         '-fedora-' ~ (hw_class | lower) }}
 
-    - name: Set tailscale args fact
-      ansible.builtin.set_fact:
-        tailscale_args: "--hostname={{ static_hostname }} --authkey={{ tailscale_authkey }}"
+    # - name: Set tailscale args fact
+    #   ansible.builtin.set_fact:
+    #     tailscale_args: "--hostname={{ static_hostname }} --authkey={{ tailscale_authkey }}"
 
-    - name: Set static hostname
-      ansible.builtin.hostname:
-        name: "{{ static_hostname }}"
+    # - name: Set static hostname
+    #   ansible.builtin.hostname:
+    #     name: "{{ static_hostname }}"
 
-    - name: Set pretty hostname
-      ansible.builtin.command:
-        argv:
-          - hostnamectl
-          - set-hostname
-          - "--pretty"
-          - "{{ pretty_hostname }}"
-      changed_when: "'Static hostname' not in lookup('pipe', 'hostnamectl status')"
+    # - name: Set pretty hostname
+    #   ansible.builtin.command:
+    #     argv:
+    #       - hostnamectl
+    #       - set-hostname
+    #       - "--pretty"
+    #       - "{{ pretty_hostname }}"
+    #   changed_when: "'Static hostname' not in lookup('pipe', 'hostnamectl status')"
 
-    - name: Ensure /etc/hosts is updated
-      ansible.builtin.lineinfile:
-        path: /etc/hosts
-        regexp: '^127\\.0\\.0\\.1'
-        line: "127.0.0.1   localhost {{ static_hostname }}"
+    # - name: Ensure /etc/hosts is updated
+    #   ansible.builtin.lineinfile:
+    #     path: /etc/hosts
+    #     regexp: '^127\\.0\\.0\\.1'
+    #     line: "127.0.0.1   localhost {{ static_hostname }}"
 
   roles:
-    - role: workstation_prep
-      tags: prep
+    - role: oh_my_zsh_install
 
     # - name: Install TigerVNC
     #   dnf:
