--- a/ansible/inventories/group_vars/proxmox_cluster.yml
+++ b/ansible/inventories/group_vars/proxmox_cluster.yml
@@ -87,7 +87,7 @@ proxmox_cluster_layout:
 
 # Proxmox API connection (used from the control host / localhost)
 proxmox_api_host: "{{ hostvars[groups['proxmox'][0]].ansible_host }}"
-proxmox_api_user: "sfroeber@pam"
+proxmox_api_user: "root@pam"
 
 # Storage ID as known to Proxmox (the *name* in Datacenter -> Storage)
 proxmox_cluster_storage_id: "proxmox-cluster-storage"
