--- a/ansible/roles/proxmox_k3s_vm_scaffolder/tasks/main.yml
+++ b/ansible/roles/proxmox_k3s_vm_scaffolder/tasks/main.yml
@@ -22,15 +22,13 @@
       sockets: 1
       net:
         net0: "virtio={{ item.mac }},bridge={{ proxmox_bridge }}"
-      ide:
-        ide2: "{{ proxmox_cluster_storage_id }}:cloudinit"
-      cicustom: "user={{ proxmox_cluster_storage_id }}:snippets/{{ item.name }}.ign"
       agent: 1
       scsihw: virtio-scsi-single
       scsi:
         scsi0: "{{ proxmox_storage }}:0,import-from={{ proxmox_k3s_fcos_template_path }},format=qcow2,iothread=1"
       ostype: l26
       boot: "order=scsi0"
+      args: "-fw_cfg name=opt/org.fedoraproject.butane/config,file={{ proxmox_cluster_storage_snippets_dir }}/{{ item.name }}.ign"
   loop: "{{ proxmox_k3s_vm_scaffolder_all_vms }}"
   loop_control:
     label: "{{ item.name }}"
