--- a/ansible/playbooks/k3s-cluster-setup.yml
+++ b/ansible/playbooks/k3s-cluster-setup.yml
@@ -59,5 +59,6 @@
   gather_facts: true
   roles:
     - role: proxmox_k3s_vm_destroyer
+      when: "'vm_delete' in ansible_run_tags"
   tags:
     - vm_delete
