--- a/ansible/roles/proxmox_k3s_vm_scaffolder/tasks/main.yml
+++ b/ansible/roles/proxmox_k3s_vm_scaffolder/tasks/main.yml
@@ -28,7 +28,14 @@
         scsi0: "{{ proxmox_storage }}:0,import-from={{ proxmox_k3s_fcos_template_path }},format=qcow2,iothread=1"
       ostype: l26
       boot: "order=scsi0"
-      args: "-fw_cfg name=opt/org.fedoraproject.butane/config,file={{ proxmox_cluster_storage_snippets_dir }}/{{ item.name }}.ign"
+      onboot: true
+      localtime: true
+      args: "-fw_cfg name=opt/com.coreos/config,file={{ proxmox_cluster_storage_snippets_dir }}/{{ item.name }}.ign"
+      pool: kubernetes
+      tags:
+        - coachlight-homelab
+        - cluster-service
+        - "{{ 'cluster-control' if item.role is defined else 'cluster-worker' }}"
   loop: "{{ proxmox_k3s_vm_scaffolder_all_vms }}"
   loop_control:
     label: "{{ item.name }}"
