--- a/ansible/inventories/hosts.yml
+++ b/ansible/inventories/hosts.yml
@@ -38,7 +38,7 @@ all:
           lan_ip: 192.168.226.96
         k3s-wkr-2:
           lan_ip: 192.168.226.97
-        k3s-media-wkr-3:
+        k3s-wkr-3:
           lan_ip: 192.168.226.98
 
     k3s_cluster:
