--- a/ansible/ansible.cfg
+++ b/ansible/ansible.cfg
@@ -6,4 +6,5 @@ inventory = ./inventories/hosts.yml
 roles_path = ./roles
 playbook_dir = ./playbooks
 
-callbacks_enabled = timer, profile_tasks
+callbacks_enabled = timer
+# , profile_tasks
