--- a/ansible/inventories/group_vars/proxmox_cluster.yml
+++ b/ansible/inventories/group_vars/proxmox_cluster.yml
@@ -35,7 +35,7 @@ proxmox_cluster_layout:
       mac: "52:54:00:12:34:01"
       proxmox_node: coachlight-homelab-1
       role: bootstrap
-      cpu: 2
+      cpu: 4
       memory: 4096
       disk: 60
     - name: k3s-cp-2
@@ -44,7 +44,7 @@ proxmox_cluster_layout:
       mac: "52:54:00:12:34:02"
       proxmox_node: coachlight-homelab-2
       role: join
-      cpu: 2
+      cpu: 4
       memory: 4096
       disk: 60
     - name: k3s-cp-3
@@ -53,7 +53,7 @@ proxmox_cluster_layout:
       mac: "52:54:00:12:34:03"
       proxmox_node: coachlight-homelab-3
       role: join
-      cpu: 2
+      cpu: 4
       memory: 4096
       disk: 60
 
@@ -65,7 +65,7 @@ proxmox_cluster_layout:
       proxmox_node: coachlight-homelab-1
       role: worker
       cpu: 4
-      memory: 4096
+      memory: 6144
       disk: 150
     - name: k3s-wkr-2
       vmid: 201
@@ -74,16 +74,16 @@ proxmox_cluster_layout:
       proxmox_node: coachlight-homelab-2
       role: worker
       cpu: 4
-      memory: 4096
+      memory: 6144
       disk: 150
     - name: k3s-wkr-3
       vmid: 202
       ip: 192.168.226.98
       mac: "52:54:00:12:34:06"
       proxmox_node: coachlight-homelab-3
-      role: media_worker
-      cpu: 8
-      memory: 8192
+      role: worker
+      cpu: 4
+      memory: 6144
       disk: 240
 
 # Proxmox API connection (used from the control host / localhost)
