--- a/ansible/site.yml
+++ b/ansible/site.yml
@@ -40,6 +40,26 @@
                     'Coachlight ProxMox Cluster',
                     field='password',
                     vault='HomeLab') }}
+        tailscale_oauth_client_id: >-
+          {{ lookup('community.general.onepassword',
+                    'Tailscale',
+                    field='tailscale_oauth_client_id',
+                    vault='HomeLab') }}
+        tailscale_oauth_client_secret: >-
+          {{ lookup('community.general.onepassword',
+                    'Tailscale',
+                    field='tailscale_oauth_client_secret',
+                    vault='HomeLab') }}
+        k3s_synology_csi_nas_username: >-
+          {{ lookup('community.general.onepassword',
+                    'tpmiwkdnk3qafsg4u3r6l7simy',
+                    field='username',
+                    vault='HomeLab') }}
+        k3s_synology_csi_nas_password: >-
+          {{ lookup('community.general.onepassword',
+                    'tpmiwkdnk3qafsg4u3r6l7simy',
+                    field='password',
+                    vault='HomeLab') }}
       run_once: true
 
     - name: Set become vars for this play
