--- a/ansible/inventories/group_vars/local.yml
+++ b/ansible/inventories/group_vars/local.yml
@@ -36,7 +36,7 @@ file_publish_targets:
   - coachlight-homelab-3
 file_publish_artifact_path: "{{ playbook_dir }}/.artifacts/file_publish_artifacts.json"
 
-k3s_kubeconfig_path: "{{ lookup('env', 'HOME') ~ '/.kube/coachlight-k3s-cluster' }}"
+k3s_kubeconfig_path: "{{ lookup('env', 'HOME') ~ '/.kube/config' }}"
 k3s_cluster_name: coachlight-k3s-cluster
 k3s_context_name: coachlight-k3s-cluster
 k3s_cluster_domain: rohu-shark.ts.net
