--- a/ansible/roles/argocd_deploy/tasks/main.yml
+++ b/ansible/roles/argocd_deploy/tasks/main.yml
@@ -78,6 +78,7 @@
   ansible.builtin.include_role:
     name: role_artifacts
   vars:
+    # noqa: var-naming
     calling_role_name: "argocd_deploy"
     calling_role_artifacts_inputs:
       k3s_cluster_name: "{{ argocd_deploy_cluster_name | default(k3s_cluster_name | default('', true), true) }}"
